Fixed web issues
- Fixed crash caused by inappwebview package
- Added dark theme

--- a/web/index.html
+++ b/web/index.html
@@ -31,13 +31,21 @@
 
   <title>demo_html_editor_plus</title>
   <link rel="manifest" href="manifest.json">
+  <!-- Fix for issue: https://github.com/pichillilorenzo/flutter_inappwebview/issues/1468 -->
+  <script
+      type="application/javascript"
+      src="/assets/packages/flutter_inappwebview_web/assets/web/web_support.js"
+      defer
+    ></script>
 
   <script>
     // The value below is injected by flutter build, do not touch.
     const serviceWorkerVersion = null;
   </script>
+  
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+  
 </head>
 <body>
   <script>
